--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   provider: ^4.3.1 # for State management
   http: ^0.12.0+2
   json_annotation: ^2.0.0
+  permission_handler: ^5.0.0+hotfix.3
+  uuid: ^2.0.4
+  image_picker: ^0.6.4
+  photo_view: ^0.9.1
+  shared_preferences: ^0.5.6+3
+  path: ^1.6.4
 
 dev_dependencies:
   flutter_test:
