--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,12 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  # if you are using latest flutter please update your flutter_svg package to ^0.18.*
-  flutter_svg: ^0.18.0 # help us to use SVG in our app
-  provider: ^4.3.1 # for State management
+  flutter_icons: ^1.0.0+1
+  flutter_spinkit: "^4.1.2"
+  flutter_svg: ^0.18.0
+  provider: ^4.3.1
   http: ^0.12.0+2
   json_annotation: ^2.0.0
-  permission_handler: ^5.0.0+hotfix.3
+  permission_handler: ^5.0.0+hotfix.5
   uuid: ^2.0.4
   image_picker: ^0.6.4
   photo_view: ^0.9.1
