--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   photo_view: ^0.9.1
   shared_preferences: ^0.5.6+3
   path: ^1.6.4
+  flutter_swiper : ^1.1.5
 
 dev_dependencies:
   flutter_test:
