--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   shared_preferences: ^0.5.6+3
   path: ^1.6.4
   flutter_swiper : ^1.1.5
+  pull_to_refresh: ^1.6.3
 
 dev_dependencies:
   flutter_test:
