--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   path: ^1.6.4
   flutter_swiper : ^1.1.5
   pull_to_refresh: ^1.6.3
+  flutter_tags: ^0.4.9+1
 
 dev_dependencies:
   flutter_test:
