--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_swiper : ^1.1.5
   pull_to_refresh: ^1.6.3
   flutter_tags: ^0.4.9+1
+  webview_flutter: ^0.3.24
 
 dev_dependencies:
   flutter_test:
