--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=leeoeol312!!
 keyPassword=leeoeol312!!
 keyAlias=key
-storeFile=/Users/we/dev/ullee/connect-people-front/key.jks
+storeFile=/Users/ullee/Library/Mobile Documents/com~apple~CloudDocs/dev/cplab/connect-people-front/key.jks
