--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.1+1
 
 "configurations": [
   {
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_icons: ^1.0.0+1
   flutter_spinkit: "^4.1.2"
-  flutter_svg: ^0.18.0
+  flutter_svg: ^0.19.2+1
   provider: ^4.3.1
   http: ^0.12.0+2
   json_annotation: ^2.0.0
