--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   pull_to_refresh: ^1.6.3
   flutter_tags: ^0.4.9+1
   webview_flutter: ^0.3.24
+  firebase_dynamic_links: ^0.7.0
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
