--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   pull_to_refresh: ^1.6.3
   flutter_tags: ^0.4.9+1
   webview_flutter: ^0.3.24
-  # firebase_dynamic_links: ^0.6.2
+  flutter_paginator: ^0.0.6
   url_launcher: ^6.0.3
 
 dev_dependencies:
