--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.3+1
+version: 1.0.4+1
 
 "configurations": [
   {
@@ -53,6 +53,7 @@ dependencies:
   webview_flutter: ^0.3.24
   flutter_paginator: ^0.0.6
   url_launcher: ^6.0.3
+  flutter_linkify: ^5.0.0
 
 dev_dependencies:
   flutter_test:
