--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Apple</key>
+	<string></string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -15,15 +17,40 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>$(FLUTTER_BUILD_NAME)</string>
+	<string>$(MARKETING_VERSION)</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>$(FLUTTER_BUILD_NUMBER)</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>This app requires access to play music</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>App would like to use your bluetooth for communication purposes</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>App would like to use your bluetooth for communication purposes</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>App needs to use your calendars</string>
+	<key>NSCameraUsageDescription</key>
+	<string>App requires access to your camera to allow you to take a photo of your ID to process your request</string>
+	<key>NSContactsUsageDescription</key>
+	<string>App needs to use your contacts</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>App requires access to your FaceID to process your request</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App needs to use your location when</string>
+	<key>NSMotionUsageDescription</key>
+	<string>App needs to use your motion</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>photos</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>App needs to use your speech</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -43,10 +70,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
-  <key>NSAppTransportSecurity</key>
-  <dict>
-    <key>NSAllowsArbitraryLoads</key>
-    <true/>
-  </dict>
+	<key>kTCCServiceMediaLibrary</key>
+	<string>App needs to use your music</string>
 </dict>
 </plist>
