--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.8+3
+version: 1.0.9+12
 
 "configurations": [
   {
@@ -39,11 +39,11 @@ dependencies:
   flutter_spinkit: "^4.1.2"
   flutter_svg: ^0.19.2+1
   provider: ^4.3.1
-  http: ^0.12.0+2
+  http: ^0.13.1
   json_annotation: ^3.0.0
   permission_handler: ^5.0.0+hotfix.5
   uuid: ^2.0.4
-  image_picker: ^0.6.4
+  image_picker: ^0.7.4
   photo_view: ^0.9.1
   shared_preferences: ^0.5.6+3
   path: ^1.6.4
