--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.9+14
+version: 1.0.9+15
 
 "configurations": [
   {
@@ -37,12 +37,12 @@ dependencies:
   cupertino_icons: ^0.1.3
   flutter_icons: ^1.0.0+1
   flutter_spinkit: "^4.1.2"
-  flutter_svg: ^0.19.2+1
+  flutter_svg: ^0.21.0+1
   provider: ^4.3.1
   http: ^0.13.1
   json_annotation: ^3.0.0
   permission_handler: ^5.0.0+hotfix.5
-  uuid: ^2.0.4
+  uuid: ^3.0.4
   image_picker: ^0.7.4
   photo_view: ^0.9.1
   shared_preferences: ^0.5.6+3
@@ -54,6 +54,7 @@ dependencies:
   flutter_paginator: ^0.0.6
   url_launcher: ^6.0.3
   flutter_linkify: ^5.0.0
+  cached_network_image: ^3.0.0
 
 dev_dependencies:
   flutter_test:
