--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,7 +48,7 @@
 	<key>NSMotionUsageDescription</key>
 	<string>App needs to use your motion</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>photos</string>
+	<string>게시글의 홍보 효과를 올리기 위해 사진 업로드는 필수적으로 요구하고 있습니다. 이를 위해 사진, 미디어 접근 권한이 필요합니다.</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>App needs to use your speech</string>
 	<key>UILaunchStoryboardName</key>
